<resources>
    <string name="app_name">Event Manager</string>

    <string name="places_sdk_api_key">AIzaSyCdomrCkMWt3MqAbX2ST1EmR0IYCtrmry0</string>

    <string name="generic_error_loading_data">There was an error while trying to load your data. Please try again</string>
    <string name="generic_error_saving_data">There was an error while saving your data. Please try again</string>
    <string name="generic_nothing_to_load">There was nothing to load!</string>

    <string name="generic_name">Name</string>
    <string name="generic_description">Description</string>
    <string name="generic_job_title">Job Title</string>
    <string name="generic_email">Email</string>

    <string name="send_email_chooser_title">Send Email</string>

    <string name="company_creation_enter_company_name_hint">Company Name</string>
    <string name="company_creation_create_company_text">Create a Company</string>
    <string name="company_creation_join_company_text">Join a Company</string>
    <string name="company_creation_enter_company_id_hint">Enter Company ID</string>
    <string name="company_creation_confirm_id_text">Confirm Company ID</string>
    <string name="company_creation_confirm_create_company">Create Company</string>

    <string name="company_join_success_message">You have successfully joined the company</string>
    <string name="company_join_failure_message">There was an error joining the company</string>

    <string name="error_sign_in">There was an error on signing in. Please try again</string>
    <string name="error_creating_company">There was an error when attempting to create your company</string>

    <string name="title_activity_event_list">EventListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_menu_my_events">Events</string>
    <string name="create_event_text">Create Event</string>

    <string name="create_event_enter_event_name_hint">Event Name</string>
    <string name="create_event_enter_event_description_hint">Event Description</string>
    <string name="create_event_enter_event_location_hint">Enter Venue Address</string>
    <string name="create_event_choose_start_date_text">Start Date</string>
    <string name="create_event_no_start_date_chosen">No Start Date Chosen</string>
    <string name="create_event_choose_end_date_text">End Date</string>
    <string name="create_event_no_end_date_chosen">No End Date Chosen</string>
    <string name="create_event_choose_start_time_Text">Start Time</string>
    <string name="create_event_no_start_time_chosen">No Start Time Chosen</string>
    <string name="create_event_choose_end_time_Text">End Time</string>
    <string name="create_event_no_end_time_chosen">No End Time Chosen</string>
    <string name="create_event_choose_attendees_text">Invite Guests</string>
    <string name="create_event_no_attendees_chosen">No Guests Invited</string>

    <string name="create_event_error_empty_fields">You must enter a value for all fields</string>
    <string name="create_event_success">Your event has been created successfully</string>
    <string name="create_event_error">There was an error creating your event. Please try again</string>

    <string name="notification_token_save_error_message">There was an error setting up notification services</string>

    <string name="attending_text">Attending</string>
    <string name="invited_text">Invited</string>
    <string name="my_events_text">My Events</string>

    <string name="create_profile_error_enter_name">You must enter your first and last name</string>

    <string name="nav_menu_my_company">My Company</string>
    <string name="nav_menu_my_profile">My Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="person_profile_picture">Person Profile Picture</string>
    <string name="generic_going_text">Accept</string>
    <string name="generic_not_going_text">Decline</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_job_title">Enter Job Title</string>
    <string name="enter_some_info_about_yourself">Enter some info about yourself!</string>
    <string name="create_profile">Create Profile</string>
    <string name="tap_to_take_a_profile_picture">Tap to Take a Profile Picture</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="enter_event_details_for_this_user">Enter Event Details for this User</string>
    <string name="enter_a_heading_for_these_details">Enter a heading for these details</string>
    <string name="view_event_details">View Event Details</string>
    <string name="rate_your_experience_with_event_creation">Rate your experience with event creation</string>
    <string name="rate_your_experience_with_attendee_management">Rate your experience with attendee management</string>
    <string name="rate_your_experience_with_managing_a_created_event">Rate your experience with managing a created event</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="enter_any_other_comments_you_have">Enter any other comments you have</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="calendar">Calendar</string>
</resources>
