<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/enter_event_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="bottom"
        android:hint="@string/create_event_enter_event_name_hint"
        android:inputType="textCapWords"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/enter_event_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="bottom"
        android:hint="@string/create_event_enter_event_description_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/enter_event_name_edit_text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/enter_event_location_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="bottom"
        android:hint="@string/create_event_enter_event_location_hint"
        android:inputType="textCapWords"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/enter_event_description_edit_text"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/create_event_choose_start_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event_choose_start_date_text"
        app:layout_constraintTop_toBottomOf="@id/enter_event_location_edit_text" />

    <Button
        android:id="@+id/create_event_choose_end_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event_choose_end_date_text"
        app:layout_constraintTop_toBottomOf="@id/create_event_choose_start_date_button" />

    <Button
        android:id="@+id/create_event_choose_start_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event_choose_start_time_Text"
        app:layout_constraintTop_toBottomOf="@id/create_event_choose_end_date_button" />

    <Button
        android:id="@+id/create_event_choose_end_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event_choose_end_time_Text"
        app:layout_constraintTop_toBottomOf="@id/create_event_choose_start_time_button" />

    <Button
        android:id="@+id/choose_attendees_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event_choose_attendees_text"
        app:layout_constraintTop_toBottomOf="@id/create_event_choose_end_time_button" />

    <Button
        android:id="@+id/create_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/create_event_text"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>