<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_events">

    <fragment
        android:id="@+id/nav_my_events"
        android:name="graeme.hosford.eventmanager.presentation.event.list.common.view.EventListFragment"
        android:label="@string/nav_menu_my_events"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_event_detail"
        android:name="graeme.hosford.eventmanager.presentation.event.detail.view.EventDetailFragment" />

    <fragment
        android:id="@+id/nav_create_event"
        android:name="graeme.hosford.eventmanager.presentation.event.create.view.CreateEventFragment"
        android:label="@string/create_event_text" />

    <fragment
        android:id="@+id/nav_choose_attendees"
        android:name="graeme.hosford.eventmanager.presentation.attendees.choose.view.AttendeesFragment"
        android:label="@string/create_event_choose_attendees_text" />

    <fragment
        android:id="@+id/nav_my_company"
        android:name="graeme.hosford.eventmanager.presentation.company.detail.view.CompanyDetailFragment"
        android:label="@string/nav_menu_my_company"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_profile_detail"
        android:name="graeme.hosford.eventmanager.presentation.profile.detail.view.ProfileDetailFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile_detail" />

    <fragment
        android:id="@+id/nav_attendee_detail"
        android:name="graeme.hosford.eventmanager.presentation.attendees.detail.view.AttendeeListFragment"
        android:label="Attendees" />
</navigation>