<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/create_profile_picture_image_view"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/create_profile_enter_first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/enter_first_name"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/create_profile_picture_image_view" />

    <EditText
        android:id="@+id/create_profile_enter_last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/enter_last_name"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/create_profile_enter_first_name_edit_text" />

    <EditText
        android:id="@+id/create_profile_enter_job_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/enter_job_title"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/create_profile_enter_last_name_edit_text" />

    <EditText
        android:id="@+id/create_profile_enter_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/enter_some_info_about_yourself"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/create_profile_enter_job_title_edit_text" />

    <Button
        android:id="@+id/create_profile_confirm_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_profile"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>