<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_event_detail_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_heading_for_these_details"
        android:importantForAutofill="no"
        android:inputType="textAutoCorrect"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_event_detail_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/enter_event_details_for_this_user"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@id/confirm_user_event_detail_button"
        app:layout_constraintTop_toBottomOf="@id/enter_event_detail_subject" />

    <Button
        android:id="@+id/confirm_user_event_detail_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_details"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>