<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_detail_picture_image_view"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <graeme.hosford.eventmanager.presentation.common.view.custom.SummaryTextView
        android:id="@+id/profile_Detail_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_detail_picture_image_view"
        app:titleText="@string/generic_name" />

    <graeme.hosford.eventmanager.presentation.common.view.custom.SummaryTextView
        android:id="@+id/profile_detail_job_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_Detail_name_text_view"
        app:titleText="@string/generic_job_title" />

    <graeme.hosford.eventmanager.presentation.common.view.custom.SummaryTextView
        android:id="@+id/profile_detail_user_email_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_detail_job_title_text_view"
        app:titleText="@string/generic_email" />

    <graeme.hosford.eventmanager.presentation.common.view.custom.SummaryTextView
        android:id="@+id/profile_detail_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_detail_user_email_text_view"
        app:titleText="@string/generic_description" />

</androidx.constraintlayout.widget.ConstraintLayout>