<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/event_creation_rating_header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/rate_your_experience_with_event_creation"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/event_creation_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_creation_rating_header_text_view" />

    <TextView
        android:id="@+id/event_management_rating_header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/rate_your_experience_with_managing_a_created_event"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/event_creation_rating_bar" />

    <RatingBar
        android:id="@+id/event_management_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_management_rating_header_text_view" />

    <TextView
        android:id="@+id/attendee_management_rating_header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/rate_your_experience_with_attendee_management"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/event_management_rating_bar" />

    <RatingBar
        android:id="@+id/attendee_management_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attendee_management_rating_header_text_view" />

    <EditText
        android:id="@+id/other_comments_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/enter_any_other_comments_you_have"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@id/submit_feedback_button"
        app:layout_constraintTop_toBottomOf="@id/attendee_management_rating_bar"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/submit_feedback_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_feedback"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>